# flask_blogV3

./: README.md  forms.py  main.py  pyproject.toml  requirements.txt
instance/: comments.db  users.db
templates/: header.html  index.html  login.html  post.html  register.html
